--- a/src/index.ejs
+++ b/src/index.ejs
@@ -19,319 +19,144 @@
 
   <d-article>
   <d-title>
-    <h1>Distill Example</h1>
-    <p>An example project using Webpack, Babel, and Svelte. </p>
+    <h1>Safe action repetition for Policy Gradient methods</h1>
   </d-title>
 
   <d-article>
-
+    
+    <h4>Introduction</h4>
     <p>
-      Welcome to a Distill example article: meant to get you writing up your research quickly. Let's demo some
-      features:
+      Many reinforcement learning (RL) problems, such as any robotics task, are defined in a continuous setting. This does not
+      fit the Markov Decision Process (MDP) framework, which is the basis of most RL algorithms. To 
+      solve this, continuous time is discretized by a <i>discretization time scale</i> $\delta$. RL algorithms' performance has
+      been shown to be highly sensitive to the choice of this parameter. This work presents an algorithm that performs well  
+      regardless of the choice of $\delta$.
     </p>
 
-    <h4>Hot reloading</h4>
-    <p>Your browser can automatically refresh when your editor saves. This should work by default, and you can disable
-      it in <code>index.js</code>. Sometimes hot reloading isn't fully compatible with all types of code, so you may
-      need to try manually reloading if you're seeing inconsistent behavior.</p>
-
-    <h4>Inlined SVGs</h4>
-    <p>SVGs are so small that it can be nice to save an extra request and simply inline them intop your HTML:</p>
-
-    <figure>
-      <%= require("../static/diagrams/diffparam.svg") %>
-    </figure>
-
-    <style>
-      #arrow-2 #arrow-head {
-        fill: steelblue;
-      }
-
-      #arrow-2 #arrow-line {
-        stroke: steelblue;
-      }
-    </style>
-
-
-    <p>Let's use some CSS to style an inlined SVG. Here's an arrow
-      <svg width="27px" height="9px" viewBox="0 0 27 9" version="1.1" xmlns="http://www.w3.org/2000/svg"
-        xmlns:xlink="http://www.w3.org/1999/xlink">
-        <g id="arrow" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-          <g id="Group" transform="translate(-0.195652, 0.0)">
-            <path d="M10.5,4.5 L26.8913043,4.5" id="arrow-line" stroke="#FF6600" stroke-width="2"
-              stroke-linecap="square" stroke-dasharray="6,4"></path>
-            <g id="arrow-head" transform="translate(5.0, 4.5) scale(-1, 1) translate(-5.0, -4.5) translate(0.5, 0.0)"
-              fill="#FF6600" fill-rule="nonzero">
-              <path
-                d="M4.5,0 C5.67007294,3.25202425 6.85281213,6.29180565 9,9 L4.5,7.3125 L0,9 C2.13530145,6.28972675 3.34126793,3.24998975 4.5,0 Z"
-                id="Shape" transform="translate(4.5, 4.5) rotate(-270.0) translate(-4.5, -4.5) "></path>
-            </g>
-          </g>
-        </g>
-      </svg> that we
-      can make
-      inline. If you'd like to change the color in CSS, we can do so. Let's put the second arrow (<span
-        id="arrow-2"><svg width="27px" height="9px" viewBox="0 0 27 9" version="1.1" xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink">
-          <g id="arrow" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-            <g id="Group" transform="translate(-0.195652, 0.0)">
-              <path d="M10.5,4.5 L26.8913043,4.5" id="arrow-line" stroke="#FF6600" stroke-width="2"
-                stroke-linecap="square" stroke-dasharray="6,4"></path>
-              <g id="arrow-head" transform="translate(5.0, 4.5) scale(-1, 1) translate(-5.0, -4.5) translate(0.5, 0.0)"
-                fill="#FF6600" fill-rule="nonzero">
-                <path
-                  d="M4.5,0 C5.67007294,3.25202425 6.85281213,6.29180565 9,9 L4.5,7.3125 L0,9 C2.13530145,6.28972675 3.34126793,3.24998975 4.5,0 Z"
-                  id="Shape" transform="translate(4.5, 4.5) rotate(-270.0) translate(-4.5, -4.5) "></path>
-              </g>
-            </g>
-          </g>
-        </svg></span>) in a tag with an ID, so we can
-      target it in CSS.
-
-      <d-code block="" language="css">
-        #arrow-2 #arrow-head {
-        fill: steelblue;
-        }
-
-        #arrow-2 #arrow-line {
-        stroke: steelblue;
-        }
-      </d-code>
-
+    <h4>Approach</h4>
+    <p>
+      Previous works have used the framework of <i>durative actions</i>, which in a discretized setting are equivalent to
+      <i>action repetition</i>. To achieve this, a policy is chosen to produce an action along with a number of repetitions. 
+      This does not allow the algoritm to stop the repetition of an action, which means the agent cannot accommodate for 
+      unexpected events, an ability crucial for robotics. To solve this, this work presents the apporach of <i>Safe Action
+      Repetition</i> (SAR), in which the policy produces an action and a safe region. The agent will repeat the action until it
+      leaves the safe region. SAR allows policy gradient (PG) to both be invariant to the choice of $\delta$ and perform well
+      in stochastic environments.
     </p>
 
-    <h4>Formulas</h4>
-
-    <p>Here's a test of an inline equation <d-math>c = a^2 + b^2</d-math>. Can also be used with configurable katex
-      settings, for example by
-      using inline <code>$</code> signs: <d-math>x^2</d-math>. There are also block equations:</p>
-    <d-math block="">
-      c = \pm \sqrt{ \sum_{i=0}^{n}{a^{222} + b^2}}
-    </d-math>
-    <p>Math can also be quite involved:</p>
-    <d-math block="">
-      \frac{1}{\Bigl(\sqrt{\phi \sqrt{5}}-\phi\Bigr) e^{\frac25 \pi}} = 1+\frac{e^{-2\pi}} {1+\frac{e^{-4\pi}}
-      {1+\frac{e^{-6\pi}} {1+\frac{e^{-8\pi}} {1+\cdots} } } }
-    </d-math>
-
-    <p>We've also been experimenting with <a
-        href="https://github.com/distillpub/template/wiki/Annotated-Formulas">annotated formulas</a>:</p>
-
-    <style>
-      .eq-grid {
-        display: grid;
-        justify-content: start;
-        grid-row-gap: 10px;
-      }
-
-      .eq-grid figcaption d-math {
-        font-size: 100%;
-      }
-
-      .eq-grid .expansion-marker {
-        border: 1px solid #CCC;
-        border-bottom: none;
-        height: .5em;
-        width: 100%;
-      }
-    </style>
-
-    <figure class="eq-grid">
-
-      <div style="grid-row: 1; grid-column: 1;">
-        <d-math> C ~~~=~~~~ </d-math>
-      </div>
-      <div style="grid-row: 1; grid-column: 2;">
-        <d-math> H^E_D(X, Z) </d-math>
-      </div>
-      <div style="grid-row: 1; grid-column: 3;">
-        <d-math> ~~~-~~~ </d-math>
-      </div>
-      <div style="grid-row: 1; grid-column: 4;">
-        <d-math> H^E_E(X, Z) </d-math>
-      </div>
-
-
-      <div class="expansion-marker" style="grid-row: 2; grid-column: 4 / 7; "></div>
-
-      <div style="grid-row: 3; grid-column: 1;">
-        <d-math> ~~~~~~~=~~~~ </d-math>
-      </div>
-      <div style="grid-row: 3; grid-column: 2;">
-        <d-math> H^E_D(X, Z) </d-math>
-      </div>
-      <div style="grid-row: 3; grid-column: 3;">
-        <d-math> ~~~-~~~ </d-math>
-      </div>
-      <div style="grid-row: 3; grid-column: 4;">
-        <d-math> H^E_E(Z | X) </d-math>
-      </div>
-      <div style="grid-row: 3; grid-column: 5;">
-        <d-math> ~~~-~~~ </d-math>
-      </div>
-      <div style="grid-row: 3; grid-column: 6;">
-        <d-math> H^E_E(X) </d-math>
-      </div>
-
-      <figcaption style="grid-row: 4; grid-column: 4; max-width:135px;">
-        Bits to represent <d-math>z</d-math><br> if you already know <d-math>x</d-math>.
-      </figcaption>
-      <figcaption style="grid-row: 4; grid-column: 6; max-width:120px;">
-        Bits to represent<br>
-        <d-math>x</d-math> by itself.
-      </figcaption>
-
-    </figure>
-
-    <h4>Citations</h4>
-
-    <p>We can<d-cite key="mercier2011humans"></d-cite> also cite <d-cite
-        key="gregor2015draw,mercier2011humans,openai2018charter"></d-cite> external publications. <d-cite
-        key="dong2014image,dumoulin2016guide,mordvintsev2015inceptionism"></d-cite>. We should also be testing
-      footnotes
-      <d-footnote id="d-footnote-1">This will become a hoverable footnote. This will become a hoverable footnote. This
-        will become a
-        hoverable footnote. This will become a hoverable footnote. This will become a hoverable footnote. This will
-        become a hoverable footnote. This will become a hoverable footnote. This will become a hoverable footnote.
-      </d-footnote>. There are multiple footnotes, and they appear in the appendix<d-footnote id="d-footnote-2">Given I
-        have coded them
-        right. Also, here's math in a footnote: <d-math>c = \sum_0^i{x}</d-math>. Also, a citation. Box-ception<d-cite
-          key="gregor2015draw"></d-cite>!</d-footnote> as well.</p>
-
-
-    <h4>Displaying code</h4>
-    <p>Some inline javascript:<d-code language="javascript">var x = 25;</d-code>. And here's a javascript code block.
+    <h4>implementation</h4>
+    <p>
+      The algorithm is implemented on top of the Stable Baselines 3 (SB3) library, and tested on OpenAI's Gym environments. 
+      SB3 provides an implementation of Proximal Policy Optimization (PPO). This section will explore the main ways SB3's implementation
+      was modified to implement SAR.
     </p>
 
-    <d-code block="" language="javascript">
-      var x = 25;
-      function(x){
-      return x * x;
-      }
-    </d-code>
-    <p>We also support some highlighting.</p>
+    <h5>Policy</h5>
+    <p>
+      In SAR, the policy (an Actor-Critic Policy) produces both an action and a safe region. To achieve this, a third neural network (NN) is introduced alongside
+      the classic NNs of PG (action network, log-standard-deviation network) to produce the safe region. The NNs are created in
+      the policy class' <d-code>_build</d-code> method
+    </p>
+
     <d-code block="" language="python">
-      # Python 3: Fibonacci series up to n
-      def fib(n):
-      a, b = 0, 1
-      while a &lt; n: print(a, end=' ' ) a, b=b, a+b </d-code>
-
-    <h4>Tables</h4>
-    <p>We have simple tables that try to stay readable at most screen sizes:
-    </p>
-
-    <style>
-      #example-table {
-        overflow-x: scroll;
-      }
-
-      #example-table th {
-        white-space: nowrap;
-      }
-
-      #example-table tbody th {
-        font-weight: initial;
-        border-bottom: 1px solid rgb(242, 242, 242);
-      }
-
-      #example-table tbody tr:last-of-type th {
-        border-bottom: inherit;
-      }
-
-      #example-table td,
-      #example-table thead th {
-        text-align: center;
-      }
-
-      #example-table td {
-        border-color: rgb(242, 242, 242);
-      }
-
-      #example-table td.no {
-        background-color: #f6f6f6;
-      }
-    </style>
-    <table id="example-table">
-      <thead>
-        <tr>
-          <th></th>
-          <th scope="col">Parallel</th>
-          <th scope="col">Efficient</th>
-          <th scope="col">Reversible</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">GANs</th>
-          <td>Yes</td>
-          <td>Yes</td>
-          <td class="no">No</td>
-        </tr>
-        <tr>
-          <th scope="row">Flow Models</th>
-          <td>Yes</td>
-          <td class="no">No</td>
-          <td>Yes</td>
-        </tr>
-        <tr>
-          <th scope="row">Autoregressive Models</th>
-          <td class="no">No</td>
-          <td>Yes</td>
-          <td>Yes</td>
-        </tr>
-      </tbody>
-    </table>
-
-    <h4>Interactive Figures</h4>
+      def _build(self, lr_schedule: Schedule):
+          ...
+          if isinstance(self.action_dist, DiagGaussianDistribution):
+              self.action_net, self.log_std_net = self.action_dist.proba_distribution_net(...)
+          ...
+          elif isinstance(self.action_dist, MixedDistribution):
+              self.action_net, self.log_std_net, self.dist_action_net = self.action_dist.proba_distribution_net(
+                  latent_dim=latent_dim_pi, log_std_init=self.log_std_init
+              )
+          ...
+    </d-code>
 
     <p>
-      Here's a dynamically instantiated "figure". We use Intersection Observers to allow loading resource-heavy
-      figures only when readers scroll close to them. The code for this is in <code>src/index.js</code>.
+      <d-code>MixedDistribution</d-code> is a class that takes as an argument to its constructor any SB3 distribution class and adds to it
+      a Categorical distribution that produces the safe region:
     </p>
+    <d-code block="" language="python">
+      class MixedDistribution(Distribution):
+          def __init__(self, cont_cls, cont_kwargs, action_space):
+              super().__init__()
+              self.cont_dist = cont_cls(get_action_dim(action_space.spaces[0]), **cont_kwargs)
+              self.dis_dist = CategoricalDistribution(action_space.spaces[1].n)
+      
+          def proba_distribution_net(self, latent_dim: int, log_std_init):
+              action_net, log_std_net = self.cont_dist.proba_distribution_net(latent_dim, log_std_init)
+              dist_action_net = self.dis_dist.proba_distribution_net(latent_dim)
+              return action_net, log_std_net, dist_action_net
+        ...
+    </d-code>
 
-    <d-figure id="svelte-example-dfigure">
-      <figure>
-        <div id="svelte-example-target"></div>
-        <figcaption>And a static figcaption. You can use citations<d-cite key="mercier2011humans"></d-cite> in this
-          figcaption, but not in text added by javascript.</figcaption>
-      </figure>
-    </d-figure>
-
-    <p>You can't use citation tags (<code>d-cite</code>) in figures that are dynamically loaded using Javascript.
-      Distill statically
-      analyzes your submission for its citations, because they need to be uploaded to indexers and organizations like <a
-        href="https://www.crossref.org/">CrossRef</a> and <a href="https://scholar.google.com">Google Scholar</a>.</p>
-
-    <p>That's it for the example article! Feel free to look at <a
-        href="https://github.com/distillpub?utf8=%E2%9C%93&q=post--&type=public">implementations
-        of existing Distill articles</a>, or ask for help in
-      the <a href="http://slack.distill.pub">Distill Slack Community</a>.</p>
-
-  </d-article>
-
-
-
-  <d-appendix>
-    <h3>Acknowledgments</h3>
+    <h5>Action repetition</h5>
     <p>
-      We are deeply grateful to...
+      The actual repetition of actions, as well as the application of stochasticity, is done as part of the step function in a gym environment wrapper class.
     </p>
 
-    <p>
-      Many of our diagrams are based on...
-    </p>
+    <d-code block="" language="python">
+      def step(self, aug_action):
+          cur_idx = self.ori_action_dim
+          action = aug_action[:self.ori_action_dim]
 
-    <h3>Author Contributions</h3>
-    <p>
-      <b>Research:</b> Alex developed ...
-    </p>
+          # application of stochasticity
+          if self.anoise_type == 'action': # "action noise"
+              if np.random.rand() < self.anoise_prob:
+                  action = action + np.random.randn(*action.shape) * self.anoise_std
+                  action = np.clip(action, self.action_space.low[:len(action)], self.action_space.high[:len(action)])
+          elif self.anoise_type is not None and 'ext' in self.anoise_type: # "external force"
+              if np.random.rand() < self.anoise_prob:
+                  force = np.random.randn(3) * self.anoise_std
+                  torque = np.zeros(3)
+                  cur_info = force
 
-    <p>
-      <b>Writing & Diagrams:</b> The text was initially drafted by...
-    </p>
+              # apply force
+              self.env.sim.data.xfrc_applied[self.env.sim.model._body_name2id[self.body_key], :] = [0] * 6
+
+          u = aug_action[cur_idx]
+          cur_idx += 1
+          norm_u = (u + 1) / 2
+          u = norm_u
+
+          total_reward = 0.0
+          done = None
+          cur_gamma = 1.0
+          first_obs = self.cur_obs
+          for i in range(100000000): # repeat action forever
+              obs, reward, done, info = self.env.step(action)
+
+              if self.anoise_type in ['ext_fpc']:
+                  obs = np.concatenate([obs, self.cur_force])
+
+              if not done:
+                  self._update_obs_estimate(obs[np.newaxis, ...])
+                  self.reset_update_obs_estimate = True
+              total_reward += reward * cur_gamma
+              cur_gamma *= self.gamma
+              if done:
+                  break
+
+              if self.max_d is None:
+                  break
+
+              norm_obs = (obs - self.obs_rms.mean) / (np.sqrt(self.obs_rms.var) + self.epsilon_std)
+              norm_first_obs = (first_obs - self.obs_rms.mean) / (np.sqrt(self.obs_rms.var) + self.epsilon_std)
+
+              # Distance computation
+              d_delta = np.linalg.norm(norm_obs - norm_first_obs, ord=1) / len(obs)
+
+              # stop repetition check
+              if d_delta >= u * self.max_d:
+                  break
+
+          ...
+
+          self.num_steps += 1
+
+          return obs, total_reward, done, info
+    </d-code>
 
 
-    <d-footnote-list></d-footnote-list>
     <d-citation-list></d-citation-list>
   </d-appendix>
 
